--- a/public/help.html
+++ b/public/help.html
@@ -31,13 +31,13 @@
                                 <li>
                                     <h6>J'ai découvert un bug<a class="drop-answer"></a></h6>
                                     <div class="answer">
-                                        <p>Merci. Ecrivez nous à info@trackmyparcel.co.za</p>
+                                        <p>Merci. Ecrivez nous à info@suivrecolis.fr</p>
                                     </div>
                                 </li>
                                 <li>
                                     <h6>Combien de visiteurs recevez-vous chaque mois? <a class="drop-answer"></a></h6>
                                     <div class="answer">
-                                        <p>SuivreColis.fr est au service de plus de 200 000 français chaque jour, ce qui veut dire qu'un certain pourcentage de la population utilise le site chaque jour.</p>
+                                        <p>SuivreColis.fr est au service de plus de 200 000 français chaque jour.</p>
                                         <p>
                                         <ul>
                                           <li>550,000+ affichage de page chaque mois</li>
@@ -45,7 +45,7 @@
                                           <li>50% des utilisateurs visitent le site au moins 5 fois par mois.</li>
                                         </ul>
                                         <p>
-                                        <p>Pour faire de la publicité, écrivez-nous sur <a href="mailto:info@trackmyparcel.co.za">info@trackmyparcel.co.za</a> ou utilisez <a href="/contact">ce formulaire</a>.
+                                        <p>Pour faire de la publicité, écrivez-nous sur <a href="mailto:info@suivrecolis.fr">info@suivrecolis.fr</a> ou utilisez <a href="/contact">ce formulaire</a>.
                                     </div>
                                 </li>
                             </ul>
