--- a/public/updates.html
+++ b/public/updates.html
@@ -18,7 +18,7 @@
                 <!-- end sidebar -->
                 <div class="main-content">
                     <div class="profile-page">
-                        <h3>Updates</h3>
+                        <h3>Notifications</h3>
 
                         <p>Toutes vos notifications de colis sont ici.</p>
 
